--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1200px){
    
     nav{
         flex-direction: column;
@@ -37,21 +37,114 @@
 }
 
 
-@media screen and (max-width: 768px) {    
+@media screen and (max-width: 360px) and (min-height: 640px){    
     .slider{
         height: 25vh;
         width: 70vw;
     }
-}
-@media screen and (max-width: 414px) {    
-    .slider{
-        height: 22vh;
-        width: 65vw;
+
+    .items{
+        justify-content: start;
+        display: flex;
+        flex-direction: row;
+        padding: 0%;
+        align-items: center;    
+    }
+
+    .item{
+        align-items: center;
+        padding: 5px;
+        text-align: center;
+        font-family: 'Lato', sans-serif;
+    }
+    
+    .items img{
+        border-radius: 50%;
+        width: 10vw;
+        padding: 0 14px;
+    }    
+
+    .items h4:hover{
+        color: var(--main-bg-color);
+        cursor:pointer;
+    }
+
+    .items h4{
+        font-size: 2vh;
+    }
+
+    .card-item img{
+        width: 50px;
+    }
+
+    .search{
+        justify-content: center;  
+    }
+
+    .search input{
+        margin: 12px 16px;
+    }
+
+    nav ul{
+        height: 34px;
     }
 }
-@media screen and (max-width: 375px) {    
-    .slider{
-        height: 18vh;
-        width: 60vw;
+
+
+@media screen and (max-width: 280px) and (min-height: 653px){
+    .lines p{
+        font-size: 8px;
+    }   
+}
+
+@media screen and (max-width: 360px) and (min-height: 640px){
+    .lines p{
+        font-size: 10px;
     }
+    
+    footer{
+        height: 4vh;
+        background-color: var(--main-bg-color);
+        color: azure;
+        font-family: 'Lato', sans-serif;
+    }
+    
+    footer p{
+        text-align: center;
+        padding: 2px;
+    }
+    
+}
+
+
+@media screen and (max-width: 360px) and (min-height: 640px){
+    .lines p{
+        font-size: 10px;
+    }    
+}
+
+@media screen and (max-width: 411px) and (min-height: 731px){
+    .lines p{
+        font-size: 10px;
+    }
+
+    .items{
+        justify-content: start;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        overflow: auto;
+        white-space: nowrap;
+    }
+    
+    .item{
+        align-items: center;
+        text-align: center;
+        font-family: 'Lato', sans-serif;
+    }
+    
+    .items img{
+        border-radius: 50%;
+    }
+        
 }
