--- a/css/style.css
+++ b/css/style.css
@@ -10,140 +10,10 @@
     margin: 0;
 }
 
-header{
-    background-color: var(--main-bg-color);
-    font-family: 'Lato', sans-serif;
-    object-fit: contain;
-}
-
-.logo{
-    display: flex;
-    align-items: center;
-}
-
-.logo img{
-    width: 88px;
-    padding: 0 26px;
-}
-
-nav{
-    display: flex;
-    flex-direction: row;
-}
-
-nav ul{
-    height: 58px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-}
-
-nav ul li{
-    list-style: none;
-    padding: 0 23px;
-}
-
-nav ul li a{
-    color: azure;
-    text-decoration: none;
-    font-family: 'Lato', sans-serif;
-}
-
-nav ul li a:hover{
-    font-weight: bold;
-    text-decoration: none;
-    font-family: 'Lato', sans-serif;
-}
-
-.items{
-    justify-content: start;
-    display: flex;
-    flex-direction: row;
-    padding: 1vw;
-    align-items: center;
-    overflow: auto;
-    white-space: nowrap;
-}
-
-.item{
-    align-items: center;
-    padding: 10px;
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-    
-}
-
-.items img{
-    border-radius: 50%;
-    width: 100px;
-    padding: 0 14px;
-}
-
-.items h4:hover{
-    color: var(--main-bg-color);
-    cursor:pointer;
-}
-
-.search{
-    display: flex;
-    align-items: center;
-}
-
-.search input{
-    width: 30vh;
-    height: 27px;
-    border: 2px solid white;
-    margin: 0 7px 0 56px;
-    padding: 0 10px;
-}
-
-.search button{
-    font-family: 'Lato', sans-serif;
-    font-weight: 900;
-}
-
-.slider{
-    margin: auto;
-    margin: 20px 80px;
-    overflow: hidden;
-}
-
-.card{
-    max-width: 85vw;
-    margin: auto;
-    font-family: 'Lato', sans-serif;
-}
-
-.cards{
-    display: flex;
-    overflow: auto;
-    white-space: nowrap;
-}
-
-.card-item{
-    display: inline-flex;
-    flex-direction: column;
-    margin: 0 15px;
-   
-}
-
-.card h2{
-    font-family: 'Lato', sans-serif;
-}
 
 .container{
     min-height: calc(100vh - 58px - 12vh);
-}/*use of calc to calculate height of the container by subtracting the height of the header and footer from the total height*/
-
-footer{
-    height: 5vh;
-    padding-top: 2vh;
-    background-color: var(--main-bg-color);
-    color: azure;
-    font-family: 'Lato', sans-serif;
 }
 
-footer h5{
-    text-align: center;
-    font-family: 'Lato', sans-serif;
-}
+/*use of calc to calculate height of the container by subtracting the height of the header and footer from the total height*/
+
