--- a/css/card.css
+++ b/css/card.css
@@ -11,11 +11,11 @@
     white-space: nowrap;
 }
 
-.card-item{
+.card-item > img{
     display: inline-flex;
     flex-direction: column;
-    margin: 0 15px;
-   
+    margin: 0 15px;   
+    border-radius: 5px;
 }
 
 .card h2{
