--- a/css/card.css
+++ b/css/card.css
@@ -11,6 +11,17 @@
     white-space: nowrap;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.cards::-webkit-scrollbar {
+    display: none;
+}
+  
+/* Hide scrollbar for IE, Edge and Firefox */
+.cards {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .card-item > img{
     display: inline-flex;
     flex-direction: column;
