--- a/css/header.css
+++ b/css/header.css
@@ -86,14 +86,16 @@ nav ul li.dropdown{
 }
 
 .search input{
-    width: 30vh;
+    width: 35vh;
     height: 27px;
     border: 2px solid white;
     margin: 0 7px 0 56px;
     padding: 0 10px;
+    border-radius: 20px
 }
 
 .search button{
     font-family: 'Lato', sans-serif;
     font-weight: 900;
+    border-radius: 20px;
 }
